# ClassFlow

./: .gitignore  PLANS.md  PROGRESS.md
apps/backend/: Cargo.toml  env.example
apps/backend/src/: app.rs  artifacts.rs  config.rs  course.rs  error.rs  lib.rs  main.rs  models.rs  pipeline.rs  repository.rs  routes.rs  worker.rs
apps/backend/tests/: api.rs
apps/web/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.node.json  tsconfig.worker.json  wrangler.toml
apps/web/src/: App.css  App.test.tsx  App.tsx  api.ts  courseDownloadFilename.test.ts  courseDownloadFilename.ts  downloads.ts  index.css  progress.ts  types.ts
apps/web/src/components/: CoursePanel.tsx  TaskPanel.tsx
apps/web/worker/: index.ts  proxy.test.ts  proxy.ts
deploy/cloudflared/: config.example.yml
deploy/systemd/: classflow-backend.service  classflow-cleanup.service  classflow-cleanup.timer
docs/: api-contract.md  deployment.md
scripts/: classflow-cleanup-temp.sh
